# CommandManager

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
commandmanager_plugins/plugins/ijob/commands/: show.py
commandmanager_plugins/plugins/johan/commands/: hej.py
src/commandmanager/: bootstrap.py  cli.py  dispatcher.py  help.py  plugin_object.py  plugin_result.py  plugin_service.py  plugin_status.py  registry.py  repl.py
src/commandmanager/common/: command_result_level.py
src/commandmanager/contracts/: plugin_contract.py
